<resources>
    <string name="app_name">Apalos market</string>
    <string name="action_delete">Delete all products</string>
    <string name="product_name">Product</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="image">Image</string>
    <string name="price_symbol">€</string>
    <string name="save_menu">save</string>
    <string name="product_name_temp">Product name temp</string>
    <string name="quantity_temp">Quantity temp</string>
    <string name="price_temp">55555</string>
    <string name="add_products">Add products</string>
    <string name="delete_this_product">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_problem">Error with deleting product</string>
    <string name="delete_success">Product deleted</string>
    <string name="amount_order">Enter the amount of order!</string>
    <string name="no_email_client">There are no email clients installed.</string>
    <string name="update_err">Error with update</string>
    <string name="update_ok">Product updated Quantity:</string>
    <string name="no_values">Oooooops no values!!!</string>
    <string name="save_err">Error with saving product</string>
    <string name="save">Product saved!</string>
    <string name="change_quit">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="order">Order</string>
    <string name="amount_of_order">Amount of order</string>
    <string name="amount_of_quantity">Amount of quantity</string>
    <string name="delete_btn">delete</string>
    <string name="sale_btn">Sale</string>
    <string name="supplier_email">supplier@kappakeepo.com</string>
    <string name="subject">I need supplies for :</string>
</resources>
