<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="horizontal">

    <!-- Category column -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/category_coloumn"
            android:text="@string/product_name" />

        <TextView
            style="@style/category_coloumn"
            android:text="@string/quantity" />

        <TextView
            style="@style/category_coloumn"
            android:text="@string/price" />

        <TextView
            style="@style/category_coloumn"
            android:text="@string/image" />

    </LinearLayout>

    <!-- Edit text views column-->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <!-- Product name -->
        <EditText
            android:id="@+id/name_edit_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:maxLength="15"/>

        <!-- Quantity -->
        <EditText
            android:id="@+id/quantity_edit_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="5"/>

        <!-- Price -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/price_edit_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="5"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_symbol"
                android:layout_alignBottom="@id/price_edit_view"
                android:layout_alignRight="@id/price_edit_view"
                android:layout_alignEnd="@id/price_edit_view"
                android:layout_marginBottom="@dimen/price_sym_marg_bot"
                android:layout_marginRight="@dimen/price_sym_marg_right"
                android:layout_marginEnd="@dimen/price_sym_marg_bot"/>
        </RelativeLayout>

        <Button
            android:id="@+id/photo_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="photo"/>

        <ImageView
            android:id="@+id/photo"
            android:layout_width="100dp"
            android:layout_height="100dp" />
    </LinearLayout>
</LinearLayout>